# UR3e-moveit2-Project

manipulation_project/get_cube_pose/launch/: get_pose_client.launch.py
manipulation_project/moveit2_scripts/launch/: pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py
manipulation_project/moveit2_scripts/src/: pick_and_place_perception.cpp  pick_and_place_perception_real.cpp
manipulation_project/my_moveit_config/config/: joint_limits.yaml
manipulation_project/real_moveit_config/config/: joint_limits.yaml
moveit2_scripts/: CMakeLists.txt
moveit2_scripts/src/: pick_place.cpp
my_moveit_config/config/: kinematics.yaml  moveit.rviz  name.srdf
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  name.srdf  ur3e.srdf
real_moveit_config/launch/: move_group.launch.py
simple_grasping_ros2/simple_grasping/src/: basic_grasping_perception.cpp
universal_robot_ros2/: README.md  launch_ur3e_empty_relaunch.sh  launch_ur3e_empty_v2_relaunch.sh
universal_robot_ros2/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro  ur_moveit.urdf.xacro
universal_robot_ros2/gazebo-pkgs/gazebo_grasp_plugin/: CMakeLists.txt  package.xml
universal_robot_ros2/gazebo-pkgs/gazebo_grasp_plugin_ros/: CMakeLists.txt
universal_robot_ros2/rg2_gripper_description/: CMakeLists.txt  package.xml
universal_robot_ros2/rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro  (+1 more)
universal_robot_ros2/robotiq_85_gripper/: README.md  shift_bug.md
universal_robot_ros2/robotiq_85_gripper/robotiq_85_driver/: package.xml  setup.cfg  setup.py
universal_robot_ros2/robotiq_85_gripper/robotiq_85_driver/launch/: gripper_driver.launch.py
universal_robot_ros2/robotiq_85_gripper/robotiq_85_driver/robotiq_85_driver/: robotiq_85_driver.py  robotiq_85_test.py  robotiq_85_test_close.py  single_robotiq_85_action_server.py
universal_robot_ros2/robotiq_85_gripper/robotiq_85_driver/robotiq_85_driver/driver/: gripper_io.py  robotiq_85_gripper.py
universal_robot_ros2/robotiq_85_gripper/robotiq_85_gripper/: CMakeLists.txt  package.xml
universal_robot_ros2/robotiq_85_gripper/robotiq_85_msgs/: CMakeLists.txt  package.xml
universal_robot_ros2/robotiq_85_gripper/robotiq_85_msgs/msg/: GripperStat.msg
universal_robot_ros2/the_construct_office_gazebo/: CMakeLists.txt
(+60 files in other folders)
