<package format="3">
    <name>robotiq_85_msgs</name>
    <version>1.0.1</version>
    <description>Messages for Robotiq 85 Driver</description>
    <maintainer email="dev@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    
    <depend>std_msgs</depend>	

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
	</export>
</package>
